* ADDED: Test for legal value in attributes with type NAMEOF (a|b)

* FIXED: Handle (a,b), (a&b) and (a|b) as equivalent in ATTLIST type
  declaration.

* FIXED: option shorttag was spelled shortag.

* FIXED: Ensure the output is properly closed, even if the parser encounters
  an unexpected end-of-file.


SWI-Prolog VERSION 4.0.6
========================

* FIXED: Data overwriting in <DOCTYPE ... [local stuff]> if local stuff
  is too long (Andrew Dadakov).

* FIXED: Report elements not in the DTD allowed by the ANY model
  as error (Andrew Dadakov).

* FIXED: Call sgml_nomem() after strdup in case of out-of-memory
  (Richard O'Keefe).

* PORT: Removed alloca() usage (Richard O'Keefe).

* LIMIT: Make maximum string length 2048 to allow parsing HTML4 DTD.
  Maybe we should remove comments while fetching parameter-entity
  values?

* FIXED: Include #FIXED and defaulted arguments for omitted tags
  (reported by Richard O'Keefe).

* ADDED: handle plain <!DOCTYPE doc> silently if the catalog contains
  a DOCTYPE doc file.dtd entry.

* FIXED: Various issues in attribute handling with new routines supplied
  by Richard O'Keefe.  Added shorttag(Bool) to options you can set.

* ADDED: `make check' to run the test-suite.

* FIXED: Handling of &<tag> (Richard O'Keefe).

* FIXED: dtd2pl to use model(Model) to avoid amibiguity between CDATA and
  (CDATA) model.  Richard O'Keefe.

* FIXED: Various output aspects of the sgml driver program, notably case and
  character escaping problems.  By Richard O'Keefe.

* ADDED: Ignore SGML declaration in <!SGML ...>

* FIXED: Do not require ; after character-entity

* ADDED: Expand character and parameter entities while parsing literals
  in a DTD (Richard O'Keefe).


VERSION 1.0.13
==============

* FIXED: Interpret <!ENTITY e STARTTAG "x"> as <!ENTITY e "<x>"> (well,
  dependent on the delimiters).  (Richard O'Keefe).

* FIXED: Allow omitted end-tag for RCDATA and CDATA elements (only effective
  when hitting the end of the file).
